--- a/components/dialog-wxapp/dialog.wxml
+++ b/components/dialog-wxapp/dialog.wxml
@@ -1,3 +1,9 @@
+<!--
+ * Author: simsir-lin
+ * Github: https://github.com/simsir-lin
+ * Email: 15986907592@163.com
+-->
+
 <view class="dialog-wxapp" wx:if="{{visible}}">
   <view class='dialog-wxapp-mask' style="background: rgba(0, 0, 0, {{opacity}});" catchtouchstart="touchstart"></view>
   <view class="dialog-wxapp-main">
