--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,11 +1,20 @@
 <view class="container">
-  <dialog visible="{{dialogvisible}}" title="{{title}}" opacity="{{opacity}}" show-close="{{options.showclose}}" show-footer="{{options.showfooter}}" close-on-click-modal="{{options.closeonclickmodal}}" bindclose="handleClose" bindopen="handleOpen" bindconfirm="handleConfirm">
+  <dialog data-model="dialogvisible" visible="{{dialogvisible}}" position="{{position}}" title="{{title}}" fullscreen="{{options.fullscreen}}" opacity="{{opacity}}" show-close="{{options.showclose}}" show-footer="{{options.showfooter}}" width="{{width}}"
+    close-on-click-modal="{{options.closeonclickmodal}}" bindclose="handleClose" bindopen="handleOpen" bindconfirm="handleConfirm">
     <view style='height:20vh;'>
       这是插入的内容
     </view>
   </dialog>
-  <view class='title'>
-    <input value='{{title}}' bindinput='handleInput' placeholder='弹窗标题'></input>
+  <view class='inputs'>
+    <view>
+      <text>弹窗标题：</text>
+      <input value='{{title}}' bindinput='handleInput' placeholder='弹窗标题'></input>
+    </view>
+    <view>
+      <text>弹窗宽度：</text>
+      <input value='{{width}}' type='number' style='width:100rpx' bindinput='handleWidthInput' placeholder='弹窗宽度'></input>
+      <text>%</text>
+    </view>
   </view>
   <view class='form'>
     <view class='form-group'>
@@ -21,15 +30,32 @@
       </view>
     </view>
     <view class='form-group'>
+      <view>是否全屏</view>
+      <view>
+        <switch checked="{{options.fullscreen}}" bindchange='handleChange' data-model="fullscreen" />
+      </view>
+    </view>
+    <view class='form-group'>
       <view>是否可以点击modal关闭Dialog</view>
       <view>
         <switch checked="{{options.closeonclickmodal}}" bindchange='handleChange' data-model="closeonclickmodal" />
       </view>
     </view>
+    <view class='form-group'>
+      <view>弹窗位置</view>
+      <view>
+        <picker bindchange="handlePickerChange" value="{{positionIndex}}" range="{{positions}}" range-key="title">
+          <view>
+            {{ positions[positionIndex].title }}
+            <text style='margin-left: 10rpx;'>></text>
+          </view>
+        </picker>
+      </view>
+    </view>
     <view>
       <view>遮罩层透明度</view>
       <view style='padding:30rpx 0;'>
-        <slider bindchange="handleSliderChange" value="{{opacity}}" min="0.1" step="0.1" max="1"/>
+        <slider bindchange="handleSliderChange" value="{{opacity}}" min="0.1" step="0.1" max="1" />
       </view>
     </view>
     <button bindtap='showDialog'>打开弹窗(Open Dialog)</button>
