--- a/miniprogram_dist/index.wxml
+++ b/miniprogram_dist/index.wxml
@@ -1,10 +1,12 @@
-<view class="mask" style="background-color: rgba(0, 0, 0, {{opacity}})" wx:if="{{visible}}" bindtouchstart="touchMask">
+<view class="mask" style="background-color: rgba(0, 0, 0, {{opacity}})" bind:tap="touchMask">
   <view class="dialog {{animation ? 'animation':''}}" style="width:{{width}};max-width:{{width}};">
     <view class="dialog--header" wx:if="{{title}}">{{ title }}</view>
     <view class="dialog--body"><slot></slot></view>
-    <view class="dialog--footer" wx:if="{{showConfirm || showCancel}}">
-      <view class="dialog--footer__button {{showCancel ? 'button--border':''}}" style="color:{{cancelColor}}" wx:if="{{showCancel}}" catchtap="cancel">{{ cancelText }}</view>
-      <view class="dialog--footer__button" style="color:{{confirmColor}}" wx:if="{{showConfirm}}" catchtap="confirm">{{ confirmText }}</view>
-    </view>
+    <form bindsubmit="formSubmit" report-submit="true" report-submit-timeout="300" >
+      <view class="dialog--footer" wx:if="{{showConfirm || showCancel}}">
+        <button wx:if="{{showCancel}}" class="dialog--footer__button dialog--footer__button-cancel {{!showConfirm ? 'dialog--footer__button-single':''}}" style="color:{{cancelColor}};background-color:{{cancelBackgroundColor}}" form-type="{{gatherFormId ? 'submit':''}}" catch:tap="cancel">{{ cancelText }}</button>
+        <button wx:if="{{showConfirm}}" class="dialog--footer__button dialog--footer__button-confirm {{!showCancel ? 'dialog--footer__button-single':''}}" style="color:{{confirmColor}};background-color:{{confirmBackgroundColor}}" form-type="{{gatherFormId ? 'submit':''}}" catch:tap="confirm" loading="{{loading}}">{{ confirmText }}</button>
+      </view>
+    </form>
   </view>
 </view>
